# preconf-router

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cargo.toml  docker-compose.yml  index.js  package-lock.json  package.json
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.js
dashboard/src/components/: Proposers.tsx
preconf-cli/: .env  .env.example  index.js  package-lock.json  package.json
preconf-cli/lib/: index.js
src/: README.md  main.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/healthCheck/: mod.rs
src/modules/: adaptor.rs  mod.rs  proposer_fetcher.rs  proposer_router.rs  validator.rs
src/spec/: mod.rs
src/verify/: mod.rs
templates/: holesky.html  mainnet.html  proposer_stats.html
